<resources>
    <string name="app_name">taskList</string>
    <string name="app_name_display">Church Task Maker</string>
    <string name="login_register_with_google">Login/Cadastrar com o Google</string>
    <string name="or">ou</string>
    <string name="email">Email</string>
    <string name="invalid_email">Email Inválido</string>
    <string name="password">Senha</string>
    <string name="password_confirm">Confirmar Senha</string>
    <string name="login">Login</string>
    <string name="dont_have_registration">Não possui cadastro?</string>
    <string name="register_here">Cadastre-se aqui</string>
    <string name="forgot_here">Esqueci minha senha</string>
    <string name="have_registration">Já possui cadastro?</string>
    <string name="login_here">Faça login aqui</string>
    <string name="register">Registrar</string>
    <string name="registerUser">Registrar usuário</string>
    <string name="registerTask">Registrar tarefa</string>
    <string name="task_list">Lista de Tarefas</string>
    <string name="add">Adicionar</string>
    <string name="delete">Deletar</string>
    <string name="clean">Limpar</string>
    <string name="my_task">Minhas Tarefas</string>
    <string name="empty_list">Sem tarefas cadastradas</string>
    <string name="the_field_email_is_mandatory">O campo Email é obrigatório</string>
    <string name="all_fields_are_mandatory">É necessário preencher todos os campos</string>
    <string name="the_field_description_is_mandatory">O Campo Descrição é obrigatório</string>
    <string name="task_already_existe">Esta tarefa já existe</string>
    <string name="login_success">Login realizado com sucesso</string>
    <string name="error_login">Não foi possível realizar o Login</string>
    <string name="passwords_dont_match">As senhas não conferem</string>
    <string name="min_text_password">A senha deve ter ao menos 6 caracteres</string>
    <string name="user_created">Usuario cadastrado com sucesso</string>
    <string name="user_already_exist">Já existe um usuário com este e-mail</string>
    <string name="unable_to_create_usesr">Não foi possível cadastrar o usuário</string>
    <string name="email_is_invalid">O e-mail informado não é válido</string>
    <string name="profile">Perfil</string>
    <string name="name">Nome</string>
    <string name="surname">Sobrenome</string>
    <string name="update_profile">Atualizar Perfil</string>
    <string name="task">Tarefa</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="save">Salvar</string>
    <string name="task_created">Tarefa cadastrada com sucesso</string>
    <string name="task_updated">Tarefa atualizada com sucesso</string>
    <string name="task_deleted">Tarefa deletada com sucesso</string>
    <string name="task_completed">Tarefa realizada com sucesso</string>
    <string name="task_create_error">Não foi possível cadastrar a tarefa</string>
    <string name="task_update_error">Não foi possível atualizar a tarefa</string>
    <string name="task_delete_error">Não foi possível deletar a tarefa</string>
    <string name="weak_password">Senha fraca</string>
    <string name="medium_password">Senha média</string>
    <string name="strong_password">Senha forte</string>
    <string name="password_strength">Password strength</string>
    <string name="due_date">Data limite</string>
    <string name="complete">Complete</string>
    <string name="note">Note</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="cancel">Cancelar</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="change_cover_photo">Change cover photo</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="recover_password">Recover password</string>
</resources>