<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegisterAccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/registerUser"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmailRegister"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title_header"
            tools:layout_editor_absoluteX="16dp">

            <br.edu.infnet.atv.one.tasklist.ui.fragments.EmailValidationView
                android:id="@+id/email_validation_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/edit_mail_register"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/email"-->
<!--                android:inputType="textEmailAddress"-->
<!--                android:singleLine="true" />-->

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPasswordRegister"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmailRegister"
            tools:layout_editor_absoluteX="16dp">

<!--            <fragment-->
<!--                android:id="@+id/edit_password_register_fragment"-->
<!--                android:name="br.edu.infnet.atv.one.tasklist.ui.fragments.PasswordStrengthFragment"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="8dp"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/title_header"/>-->

            <br.edu.infnet.atv.one.tasklist.ui.fragments.PasswordStrengthView
                android:id="@+id/password_strength_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/edit_password_register"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/password"-->
<!--                android:inputType="textPassword"-->
<!--                android:singleLine="true" />-->

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPasswordRegister"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirm"
                android:inputType="textPassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/cian800"
            android:text="@string/register"
            android:onClick="register"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPassword"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:id="@+id/linear_layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/btn_login">

            <TextView
                android:id="@+id/tv_no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_registration"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_register_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_here"
                android:textSize="16sp"
                android:textStyle="bold"
                android:onClick="goToLogin"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black"
                />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>